# data-pipeline

./: .env.sample  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
bucket/extracted_data/: mongodb_api_users_2023-04-02.json  mongodb_api_users_2023-05-03.json  mongodb_users.json  rdstationcmr_contacts.json
bucket/loaded_data/: mongodb_api_users_2023-04-02.sql
bucket/raw_data/: contacts.json
bucket/transformed_data/: mongodb_api_users_2023-04-02.csv  mongodb_users.csv  rdstationcmr_contacts.csv
dags/: DEV_Client_Relationship_Management.py  dev_dag.py
dags/development/: mongodb.py  mongodb_api.py  rdstationcmr_api.py
dags/helpers/: boto3_client.py  dev_helpers.py  sql_helpers.py  variables_mongodb_api.py  variables_rdstation_api.py
tests/dags/: test_dag_integrity.py
tests/dags/development/: test_mongodb_api.py
tests/dags/helpers/: test_boto3_client.py  test_sql_helpers.py
